UCF-APR2.4/ftr main/force-app/main/default/objects/IntegrationAPIConfig__mdt/IntegrationAPIConfig__mdt.object-meta.xml
<CustomObject>
    <description>Configuration details of Integration API details</description>
    <label>IntegrationAPIConfig</label>
    <pluralLabel>Integration API Configs</pluralLabel>
</CustomObject>