UCF-APR2.4/ftr main/force-app/main/default/objects/IntegrationAPIConfig__mdt/fields/Authorization_Header__c.field-meta.xml
<CustomField>
    <fullName>Authorization_Header__c</fullName>
    <label>Authorization_Header</label>
    <length>200</length>
    <type>Text</type>
</CustomField>