UCF-APR2.4/ftr main/force-app/main/default/objects/IntegrationAPIConfig__mdt/fields/BulkNumber_URI__c.field-meta.xml
<CustomField>
    <fullName>BulkNumber_URI__c</fullName>
    <label>BulkNumber_URI</label>
    <length>200</length>
    <type>Text</type>
</CustomField>