UCF-APR2.4/ftr main/force-app/main/default/objects/IntegrationAPIConfig__mdt/fields/Correlationid__c.field-meta.xml
<CustomField>
    <fullName>Correlationid__c</fullName>
    <label>Correlationid</label>
    <length>100</length>
    <type>Text</type>
</CustomField>