UCF-APR2.4/ftr main/force-app/main/default/objects/IntegrationAPIConfig__mdt/fields/CustomerOrderMgmt_URI__c.field-meta.xml
<CustomField>
    <fullName>CustomerOrderMgmt_URI__c</fullName>
    <description>Url extension for SUbmitGroupMember Order API</description>
    <label>CustomerOrderMgmt_URI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>