UCF-APR2.4/ftr main/force-app/main/default/objects/IntegrationAPIConfig__mdt/fields/DaysToReserve__c.field-meta.xml
<CustomField>
    <fullName>DaysToReserve__c</fullName>
    <label>DaysToReserve</label>
    <length>255</length>
    <type>Text</type>
</CustomField>