UCF-APR2.4/ftr main/force-app/main/default/objects/IntegrationAPIConfig__mdt/fields/ManageResource_URI__c.field-meta.xml
<CustomField>
    <fullName>ManageResource_URI__c</fullName>
    <description>Reource Url for DPI Number reservation API</description>
    <label>ManageResource_URI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>