UCF-APR2.4/ftr main/force-app/main/default/objects/IntegrationAPIConfig__mdt/fields/OrderStaging_URI__c.field-meta.xml
<CustomField>
    <fullName>OrderStaging_URI__c</fullName>
    <label>OrderStaging_URI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>