UCF-APR2.4/ftr main/force-app/main/default/objects/IntegrationAPIConfig__mdt/fields/OssAuthToken__c.field-meta.xml
<CustomField>
    <fullName>OssAuthToken__c</fullName>
    <label>OssAuthToken</label>
    <length>255</length>
    <type>Text</type>
</CustomField>