UCF-APR2.4/ftr main/force-app/main/default/objects/IntegrationAPIConfig__mdt/fields/PutTelephoneNumber_URI__c.field-meta.xml
<CustomField>
    <fullName>PutTelephoneNumber_URI__c</fullName>
    <label>PutTelephoneNumber_URI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>