UCF-APR2.4/ftr main/force-app/main/default/objects/IntegrationAPIConfig__mdt/fields/RC360__c.field-meta.xml
<CustomField>
    <fullName>RC360__c</fullName>
    <label>RC360</label>
    <length>255</length>
    <type>Text</type>
</CustomField>