UCF-APR2.4/ftr main/force-app/main/default/objects/IntegrationAPIConfig__mdt/fields/SIFT_Token__c.field-meta.xml
<CustomField>
    <fullName>SIFT_Token__c</fullName>
    <label>SIFT-Token</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>